2008-09-12  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #546972

	* camel/camel-exchange-folder.c: (refresh_info),
	(camel_exchange_folder_add_message):
	* camel/camel-stub-constants.h:
	* mail/mail-stub-exchange.c: (class_init),
	(refresh_folder_internal), (sync_count):
	* mail/mail-stub.c: (connection_handler):
	* mail/mail-stub.h: 
	Added SYNC_COUNT to sync up counts on the operations needed. Any 
	operations that need syncing could just update the counts from mfld-> 
	counts maintained at the mail side. So Camel could just pick it up from
	there.

2008-09-08  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.23.92 release.

2008-09-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #550160

	* addressbook/e-book-backend-gal.c: (func_contains):
	Be able to search for "Name contains" like queries.

2008-09-01  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.23.91 release and version bump.

2008-09-01  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/e-book-backend-gal.c (build_contact_from_entry):
	Initialize ldap_error to make compiler happy.

2008-09-01  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #473924

	* addressbook/e-book-backend-exchange.c:
	(e_book_backend_exchange_build_restriction),
	(e_book_backend_exchange_get_contact_list),
	(e_book_backend_exchange_start_book_view):
	Prevent crash on invalid call sequence.

2008-09-01  Bob Mauchin  <zebob.m@pengzone.org>

	** Fix for bug #549228

	* mail/mail-stub-exchange.c (expunge_uids): String fix. 

2008-08-28  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/e-book-backend-exchange.c (find_deleted_ids):
	* storage/exchange-component.c (impl_createView):
	Fix a couple compiler warnings.

2008-08-18  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.23.90 release and version bump.

2008-08-18  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #462242
